2010-06-21  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.0-b3 release.

2010-06-16  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fspot/__init__.py, utils/inotify.py: Removed __del__ methods.
	* gphotoframe.schemas.in: Changed the default value of
	  'ui/source/always_show' to 'false'.

2010-06-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.0-b2 release.
	* actors.py (ActorInfoIcon): Adjust an EXIF icon position offset.
	* keyring.py (Keyring.get_passwd): Added an exception for
	  gnomekeyring.CancelledError.

2010-06-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* keyring.py (Keyring.get_passwd): Added an exception for
	  IndexError.

2010-06-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.0-b1 release.

2010-06-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* rss.py: Fixed a ZeroDivisionError.

2010-05-31  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* actors.py (ActorSourceIcon): Added _check_hide_always() for
	  hiding compulsory a source icon on photo images.
	* liststore.py: Improved cache file management.
	  Added gcon keys 'queue_menu_num' & 'queue_menu_num'.
	* photo*: Removed 'photo' from module names.

2010-05-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* actors.py, flickr/__init__.py: Added support for EXIF info. of
	  Flickr photos.
	* flickr/api.py: Added FlickrExifAPI.

2010-05-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* iconimage.py: Added support for custom icon theme.
	* tumblr.py: Added checking entries without title.

2010-05-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* actors.py: Improved Code (Added support for EXIF make tag).
	* rss.py: Added support weighted random with standard scores.

2010-05-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* rss.py: Added support weighted random for each rss feed in mixed
	  rss feeds.

2010-05-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* actors.py, base.py, picasa.py: Added support for EXIF tooltips.

2010-05-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
